integrazione select per elementi che prevedono opzioni es animations

--- a/owlcarousel.libraries.yml
+++ b/owlcarousel.libraries.yml
@@ -16,3 +16,8 @@ owlsettings:
   css:
     component:
       css/owl.settings.css : {}
+owlanimate:
+  version: 1.0
+  css:
+    component:
+        css/animate.css
