--- a/owlcarousel.libraries.yml
+++ b/owlcarousel.libraries.yml
@@ -12,7 +12,8 @@ owlcarousel:
 owlsettings:
   version: 1.0
   js:
-    js/owl.settings.js : {}
+    component:
+      js/owl.settings.js : {}
   css:
     component:
       css/owl.settings.css : {}
@@ -20,4 +21,4 @@ owlanimate:
   version: 1.0
   css:
     component:
-        css/animate.css
+        css/animate.css : {}
